Testing SEO Metatags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html lang="en">
 
 <head>
+    <!-- Primary Meta Tags -->
+<title>Download eBooks on the go!</title>
+<meta name="title" content="Download eBooks on the go!">
+<meta name="description" content="The biggest and best new releases - all in one place. Updated Weekly">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ebook-app-landing-page-nei.vercel.app/">
+<meta property="og:title" content="Download eBooks on the go!">
+<meta property="og:description" content="The biggest and best new releases - all in one place. Updated Weekly">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://ebook-app-landing-page-nei.vercel.app/">
+<meta property="twitter:title" content="Download eBooks on the go!">
+<meta property="twitter:description" content="The biggest and best new releases - all in one place. Updated Weekly">
+<meta property="twitter:image" content="">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
