--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <meta property="og:url" content="https://ebook-app-landing-page-nei.vercel.app/">
 <meta property="og:title" content="Download eBooks on the go!">
 <meta property="og:description" content="The biggest and best new releases - all in one place. Updated Weekly">
-<meta property="og:image" content="assets/images/Screen Shot 2021-04-17 at 19.16.35.png">
+<meta property="og:image" content="assets/images/preview.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://ebook-app-landing-page-nei.vercel.app/">
 <meta property="twitter:title" content="Download eBooks on the go!">
 <meta property="twitter:description" content="The biggest and best new releases - all in one place. Updated Weekly">
-<meta property="twitter:image" content="assets/images/Screen Shot 2021-04-17 at 19.16.35.png">
+<meta property="twitter:image" content="assets/images/preview.png">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
