preview image. Will it show?

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <meta property="og:url" content="https://ebook-app-landing-page-nei.vercel.app/">
 <meta property="og:title" content="Download eBooks on the go!">
 <meta property="og:description" content="The biggest and best new releases - all in one place. Updated Weekly">
-<meta property="og:image" content="assets/images/preview.png">
+<meta property="og:image" content="https://github.com/neicore/ebook-app-landing-page/blob/7bdc01d553608f2f23fea4770e91ddb9bb86bc90/assets/images/preview.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://ebook-app-landing-page-nei.vercel.app/">
 <meta property="twitter:title" content="Download eBooks on the go!">
 <meta property="twitter:description" content="The biggest and best new releases - all in one place. Updated Weekly">
-<meta property="twitter:image" content="assets/images/preview.png">
+<meta property="twitter:image" content="https://github.com/neicore/ebook-app-landing-page/blob/7bdc01d553608f2f23fea4770e91ddb9bb86bc90/assets/images/preview.png">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
